--- a/bot.html
+++ b/bot.html
@@ -59,9 +59,36 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        /* Styles for staggered child animations */
+        .animated-child {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+        }
+        .is-visible .animated-child {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        .is-visible .animated-child:nth-child(1) { transition-delay: 0.1s; }
+        .is-visible .animated-child:nth-child(2) { transition-delay: 0.2s; }
+        .is-visible .animated-child:nth-child(3) { transition-delay: 0.3s; }
+        .is-visible .animated-child:nth-child(4) { transition-delay: 0.4s; }
+        .is-visible .animated-child:nth-child(5) { transition-delay: 0.5s; }
+
+        /* Styles for splash screen */
+        body.no-scroll {
+            overflow: hidden;
+        }
     </style>
 </head>
 <body class="bg-slate-900 text-slate-300">
+
+<!-- Splash Screen -->
+<div id="splash-screen" class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm z-[100] flex items-center justify-center transition-opacity duration-500 ease-in-out">
+    <h1 class="text-4xl md:text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-indigo-200 animate-pulse">Honji Review Bot</h1>
+</div>
+
 
 <header class="bg-slate-900/70 backdrop-blur-xl sticky top-0 z-50 border-b border-slate-800">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
@@ -95,7 +122,7 @@
 </header>
 
 <main class="container mx-auto px-6 py-12">
-    <section id="hero" class="text-center py-16 fade-in-section">
+    <section id="hero" class="text-center py-16">
         <h1 class="text-4xl md:text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-indigo-200 mb-4">HJR-Bot: Ваш Автоматизированный Ассистент</h1>
         <p class="text-lg md:text-xl text-slate-400 max-w-3xl mx-auto">
             Автоматизация рутины, обеспечение справедливости и прозрачности в работе сообщества Honji Review. Беспристрастный цифровой помощник для решения сложных административных задач.
@@ -113,11 +140,11 @@
             <p class="text-slate-400 max-w-2xl mx-auto">Бот был создан для решения ключевых трудностей, мешающих росту проекта. Выберите проблему, чтобы увидеть, как HJR-Bot ее решает.</p>
         </div>
         <div class="flex flex-col md:flex-row gap-8 min-h-[400px]">
-            <div class="w-full md:w-1/3 flex flex-col space-y-4">
-                <button data-tab="problem1" class="problem-tab tab-active text-left p-4 rounded-lg font-medium transition">Сложность и предвзятость при апелляциях</button>
-                <button data-tab="problem2" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition">Непонятные и разрозненные правила</button>
-                <button data-tab="problem3" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition">Отсутствие удобного инструмента для постов</button>
-                <button data-tab="problem4" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition">Высокая административная нагрузка</button>
+            <div class="w-full md:w-1/3 flex flex-col space-y-4 animated-children-container">
+                <button data-tab="problem1" class="problem-tab tab-active text-left p-4 rounded-lg font-medium transition animated-child">Сложность и предвзятость при апелляциях</button>
+                <button data-tab="problem2" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition animated-child">Непонятные и разрозненные правила</button>
+                <button data-tab="problem3" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition animated-child">Отсутствие удобного инструмента для постов</button>
+                <button data-tab="problem4" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition animated-child">Высокая административная нагрузка</button>
             </div>
             <div class="w-full md:w-2/3 bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
                 <div id="problem1" class="solution-content">
@@ -145,8 +172,8 @@
             <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white">Как это работает</h2>
             <p class="text-slate-400 max-w-2xl mx-auto">Посмотрите на ключевые функции бота и процессы, которые он автоматизирует. Каждый шаг продуман для максимальной эффективности и удобства.</p>
         </div>
-        <div class="grid md:grid-cols-3 gap-8">
-            <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
+        <div class="grid md:grid-cols-3 gap-8 animated-children-container">
+            <div class="animated-child bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
                 <h4 class="text-xl font-bold text-indigo-400 mb-4">Создание апелляции</h4>
                 <p class="text-slate-400 mb-6">Процесс, имитирующий реальный суд для максимальной объективности.</p>
                 <div class="space-y-4 text-sm">
@@ -159,7 +186,7 @@
                     <div class="flex items-center gap-4"><div class="bg-indigo-500/20 text-indigo-300 font-bold w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0">4</div><span>Дело автоматически передается ИИ для вынесения вердикта.</span></div>
                 </div>
             </div>
-            <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
+            <div class="animated-child bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
                 <h4 class="text-xl font-bold text-indigo-400 mb-4">Вопрос по правилам</h4>
                 <p class="text-slate-400 mb-6">Получите точный ответ на любой вопрос по уставу за секунды.</p>
                 <div class="space-y-4 text-sm">
@@ -172,7 +199,7 @@
                     <div class="flex items-center gap-4"><div class="bg-indigo-500/20 text-indigo-300 font-bold w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0">4</div><span>Пользователь получает развернутый и понятный ответ.</span></div>
                 </div>
             </div>
-            <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
+            <div class="animated-child bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg">
                 <h4 class="text-xl font-bold text-indigo-400 mb-4">Создание поста (TextCrafter)</h4>
                 <p class="text-slate-400 mb-6">Простой пошаговый диалог для создания сложных публикаций.</p>
                 <div class="space-y-4 text-sm">
@@ -193,36 +220,36 @@
             <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white">Технический стек</h2>
             <p class="text-slate-400 max-w-2xl mx-auto">Наш бот — это полноценное облачное приложение, созданное с использованием современных и надежных технологий.</p>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 text-center">
-            <div class="flex flex-col items-center">
+        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 text-center animated-children-container">
+            <div class="animated-child flex flex-col items-center">
                 <div class="bg-slate-800 rounded-full p-4 shadow-lg mb-4">
                     <span class="text-4xl">🐍</span>
                 </div>
                 <h5 class="font-bold">Python</h5>
                 <p class="text-sm text-slate-500">Основной язык</p>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="animated-child flex flex-col items-center">
                 <div class="bg-slate-800 rounded-full p-4 shadow-lg mb-4">
                     <span class="text-4xl">🤖</span>
                 </div>
                 <h5 class="font-bold">pyTelegramBotAPI</h5>
                 <p class="text-sm text-slate-500">Библиотека для Telegram</p>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="animated-child flex flex-col items-center">
                 <div class="bg-slate-800 rounded-full p-4 shadow-lg mb-4">
                     <span class="text-4xl">🐘</span>
                 </div>
                 <h5 class="font-bold">PostgreSQL</h5>
                 <p class="text-sm text-slate-500">База данных</p>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="animated-child flex flex-col items-center">
                 <div class="bg-slate-800 rounded-full p-4 shadow-lg mb-4">
                     <span class="text-4xl">🚂</span>
                 </div>
                 <h5 class="font-bold">Railway</h5>
                 <p class="text-sm text-slate-500">Хостинг-платформа</p>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="animated-child flex flex-col items-center">
                 <div class="bg-slate-800 rounded-full p-4 shadow-lg mb-4">
                     <span class="text-4xl">🦄</span>
                 </div>
@@ -248,22 +275,22 @@
             <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white">Наша Команда</h2>
             <p class="text-slate-400 max-w-2xl mx-auto">Люди, стоящие за созданием и развитием HJR-Bot.</p>
         </div>
-        <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto">
-            <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg text-center">
+        <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto animated-children-container">
+            <div class="animated-child bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg text-center">
                 <div class="mx-auto bg-slate-700 rounded-full h-24 w-24 flex items-center justify-center mb-4">
                     <span class="text-5xl">🌾</span>
                 </div>
                 <h5 class="text-xl font-bold text-white">Рисовый Колонизатор</h5>
                 <p class="text-slate-500">Регулятор за выполнением задач</p>
             </div>
-            <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg text-center">
+            <div class="animated-child bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg text-center">
                 <div class="mx-auto bg-slate-700 rounded-full h-24 w-24 flex items-center justify-center mb-4">
                     <span class="text-5xl">✨</span>
                 </div>
                 <h5 class="text-xl font-bold text-white">ИИ Gemini</h5>
                 <p class="text-slate-500">Главный разработчик</p>
             </div>
-            <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg text-center">
+            <div class="animated-child bg-slate-800/50 border border-slate-700 p-8 rounded-xl shadow-lg text-center">
                 <div class="mx-auto bg-slate-700 rounded-full h-24 w-24 flex items-center justify-center mb-4">
                     <span class="text-5xl">🧪</span>
                 </div>
